--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java-library'
+
 buildscript {
     ext.kotlin_version = '1.3.0'
     repositories {
@@ -15,14 +16,13 @@ buildscript {
     }
 }
 
+apply from: '../dependencies/dagger2.gradle'
+apply from: '../dependencies/rxjava2.gradle'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.0"
     compile project(':domain')
-
-    //RxJava: For reactive programming
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
 
 sourceCompatibility = "7"
