--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'dependencies.gradle'
+
 buildscript {
-    ext.kotlin_version = '1.3.0'
+    ext.kotlin_version = '1.2.71'
     repositories {
         google()
         jcenter()
-        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.dicedmelon.gradle:jacoco-android:0.1.1"
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,14 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenCentral()
     }
-}
-
-ext {
-    //dependencies
-    dagger_version = '2.17'
-    kotlin_version = '1.3.0'
 }
 
 task clean(type: Delete) {
