--- a/mobile-ui/build.gradle
+++ b/mobile-ui/build.gradle
@@ -15,21 +15,108 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
+    dexOptions {
+        preDexLibraries = false
+        dexInProcess = false
+        javaMaxHeapSize "4g"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        exclude 'LICENSE.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+    }
+    lintOptions {
+        quiet true
+        abortOnError false
+        ignoreWarnings true
+    }
+    signingConfigs {
+        debug {
+            storeFile file("../debug.keystore")
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+        release {
+            try {
+                storeFile file("prod.keystore.jks")
+                storePassword KEYSTORE_PASSWORD
+                keyAlias 'ProductionKeyStore'
+                keyPassword KEYSTORE_PASSWORD
+            } catch (ignored) {
+                throw new InvalidUserDataException(
+                        "You should define KIOSK_KEYSTORE_PASSWORD and KIOSK_KEY_PASSWORD in gradle.properties.")
+            }
+        }
+    }
     buildTypes {
         release {
             minifyEnabled true
             shrinkResources true
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
         debug {
             applicationIdSuffix ".debug"
+            signingConfig signingConfigs.debug
             debuggable true
+
+        }
+    }
+
+    def dimensDefault = "default"
+
+    productFlavors {
+        flavorDimensions dimensDefault
+
+        dev {
+            dimension dimensDefault
+        }
+        prod {
+            dimension dimensDefault
+        }
+        sit {
+            dimension dimensDefault
+        }
+    }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = [
+                    '../libs'
+            ]
+
+            res.srcDirs = [
+                    'src/main/res'
+            ]
         }
     }
 }
 
+kapt {
+    correctErrorTypes = true
+}
+
+configurations.all {
+    resolutionStrategy {
+        force "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    }
+}
+
 dependencies {
+    implementation project(':presentation')
     def mobileUiDependencies = rootProject.ext.mobileUiDependencies
     def mobileUiTestDependencies = rootProject.ext.mobileUiTestDependencies
 
@@ -49,6 +136,7 @@ dependencies {
     implementation mobileUiDependencies.glide
     implementation mobileUiDependencies.dagger
     implementation mobileUiDependencies.daggerSupport
+    implementation mobileUiDependencies.butterknife
 
     testImplementation mobileUiTestDependencies.kotlinJUnit
 
@@ -60,16 +148,16 @@ dependencies {
     androidTestImplementation mobileUiTestDependencies.junit
     androidTestImplementation mobileUiTestDependencies.mockito
     androidTestImplementation mobileUiTestDependencies.mockitoAndroid
-    androidTestImplementation (mobileUiTestDependencies.espressoCore) {
+    androidTestImplementation(mobileUiTestDependencies.espressoCore) {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestImplementation (mobileUiTestDependencies.androidRunner) {
+    androidTestImplementation(mobileUiTestDependencies.androidRunner) {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestImplementation (mobileUiTestDependencies.androidRules) {
+    androidTestImplementation(mobileUiTestDependencies.androidRules) {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestImplementation (mobileUiTestDependencies.espressoIntents) {
+    androidTestImplementation(mobileUiTestDependencies.espressoIntents) {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
     androidTestImplementation(mobileUiTestDependencies.espressoContrib) {
