--- a/mobile-ui/build.gradle
+++ b/mobile-ui/build.gradle
@@ -133,13 +133,15 @@ dependencies {
     implementation mobileUiDependencies.rxAndroid
     implementation mobileUiDependencies.glide
     implementation mobileUiDependencies.butterknife
-    implementation "org.koin:koin-android:1.0.2"
-//    implementation(mobileUiDependencies.koinScope) {
-//        exclude group: 'com.android.support'
-//    }
-//    implementation(mobileUiDependencies.koinViewModel) {
-//        exclude group: 'com.android.support'
-//    }
+    implementation(mobileUiDependencies.koinAndroid) {
+        exclude group: 'com.android.support'
+    }
+    implementation(mobileUiDependencies.koinScope) {
+        exclude group: 'com.android.support'
+    }
+    implementation(mobileUiDependencies.koinViewModel) {
+        exclude group: 'com.android.support'
+    }
     implementation "android.arch.lifecycle:runtime:1.1.1"
 
     testImplementation mobileUiTestDependencies.kotlinJUnit
