--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,6 +25,8 @@ ext {
     butterknifeVersion = '8.5.1'
     koinVersion = '1.0.2'
     multidexVersion = '1.0.3'
+    firebaseVersion = '16.0.6'
+
     //Testing
     robolectricVersion = '3.4.2'
     jUnitVersion = '4.12'
@@ -171,7 +173,8 @@ ext {
             daggerSupport:      "com.google.dagger:dagger-android-support:${daggerVersion}",
             daggerProcessor:    "com.google.dagger:dagger-android-processor:${daggerVersion}",
             glassfishAnnotation: "org.glassfish:javax.annotation:${glassfishAnnotationVersion}",
-            multidex: "com.android.support:multidex:${multidexVersion}"
+            multidex: "com.android.support:multidex:${multidexVersion}",
+            firebase: "com.google.firebase:firebase-core:${firebaseVersion}"
     ]
 
     mobileUiTestDependencies = [
