--- a/mobile-ui/src/main/AndroidManifest.xml
+++ b/mobile-ui/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="android.kotlin.contact">
 
     <application
-        android:name=".RootApplication"
+        android:name="com.android.tasktodo.RootApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,13 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:fullBackupContent="true">
-        <activity android:name="android.kotlin.contact.RootActivity">
+        <activity android:name="android.kotlin.contact.com.kotlin.contact.RootActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".features.browser.BrowserActivity" />
+        <activity android:name="com.android.tasktodo.features.home.HomeActivity" />
     </application>
 
 </manifest>
