--- a/data/build.gradle
+++ b/data/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     def domainTestDependencies = rootProject.ext.domainTestDependencies
 
     implementation project(':domain')
+    implementation project(':remote')
 
     implementation domainDependencies.javaxAnnotation
     implementation domainDependencies.javaxInject
