--- a/local/build.gradle
+++ b/local/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     testImplementation remoteTestDependencies.mockito
     testImplementation remoteTestDependencies.assertj
 
-    compile project(':data')
+    implementation project(path: ':data', configuration: 'default')
 }
