--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     def presentationDependencies = rootProject.ext.cacheDependencies
     def presentationTestDependencies = rootProject.ext.cacheTestDependencies
 
-    compile presentationDependencies.javaxAnnotation
+    implementation presentationDependencies.javaxAnnotation
 
     implementation presentationDependencies.kotlin
     implementation presentationDependencies.javaxInject
@@ -23,5 +23,5 @@ dependencies {
     testImplementation presentationTestDependencies.mockito
     testImplementation presentationTestDependencies.assertj
     testImplementation presentationTestDependencies.robolectric
-    compile project(':domain')
+    implementation project(':domain')
 }
