--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,22 +1,23 @@
-apply plugin: 'kotlin'
+apply plugin: 'com.android.library'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+android {
+    compileSdkVersion 28
+}
+
 dependencies {
     def domainDependencies = rootProject.ext.domainDependencies
     def domainTestDependencies = rootProject.ext.domainTestDependencies
-
     implementation project(':domain')
     implementation project(':remote')
-
     implementation domainDependencies.javaxAnnotation
     implementation domainDependencies.javaxInject
     implementation domainDependencies.rxKotlin
     implementation domainDependencies.kotlin
-
     testImplementation domainTestDependencies.junit
     testImplementation domainTestDependencies.mockito
     testImplementation domainTestDependencies.assertj
-
+    implementation project(':local')
 }
