--- a/mobile-ui/src/main/AndroidManifest.xml
+++ b/mobile-ui/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="android.kotlin.contact">
+    package="android.contact.platform">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -25,7 +25,7 @@
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-feature android:name="android.hardware.location.gps" android:required="true" />
     <application
-        android:name="com.android.tasktodo.RootApplication"
+        android:name="android.contact.platform.RootApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -38,13 +38,13 @@
         tools:targetApi="P">
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
-        <activity android:name="com.android.tasktodo.RootActivity">
+        <activity android:name="android.contact.platform.RootActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.android.tasktodo.features.home.HomeActivity" />
+        <activity android:name="android.contact.platform.features.home.HomeActivity" />
     </application>
 
 </manifest>
