--- a/data/build.gradle
+++ b/data/build.gradle
@@ -8,16 +8,23 @@ android {
 }
 
 dependencies {
-    def domainDependencies = rootProject.ext.domainDependencies
-    def domainTestDependencies = rootProject.ext.domainTestDependencies
+    def dependencies = rootProject.ext.dependencies
     implementation project(':domain')
-    implementation project(':remote')
-    implementation domainDependencies.javaxAnnotation
-    implementation domainDependencies.javaxInject
-    implementation domainDependencies.rxKotlin
-    implementation domainDependencies.kotlin
-    testImplementation domainTestDependencies.junit
-    testImplementation domainTestDependencies.mockito
-    testImplementation domainTestDependencies.assertj
-    implementation project(':local')
+    implementation dependencies.javaxAnnotation
+    implementation dependencies.javaxInject
+    implementation dependencies.rxKotlin
+    implementation dependencies.kotlin
+
+    implementation dependencies.gson
+    implementation dependencies.okHttp
+    implementation dependencies.okHttpLogger
+    implementation dependencies.retrofit
+    implementation dependencies.retrofitConverter
+    implementation dependencies.retrofitAdapter
+
+    implementation 'com.github.mirrajabi:rx-contacts2:1.2.0'
+
+    testImplementation dependencies.junit
+    testImplementation dependencies.mockito
+    testImplementation dependencies.assertj
 }
