--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,4 +1,3 @@
-
 ext {
     //Android
     androidBuildToolsVersion = "28.0.3"
@@ -6,191 +5,49 @@ ext {
     androidTargetSdkVersion = 28
     androidCompileSdkVersion = 28
 
-    //Libraries
-    kotlinVersion = '1.3.10'
-    rxKotlinVersion = '2.1.0'
-    rxAndroidVersion = '2.0.1'
-    javaxAnnotationVersion = '1.0'
-    javaxInjectVersion = '1'
-    gsonVersion = '2.8.1'
-    okHttpVersion = '3.8.1'
-    androidAnnotationsVersion = '21.0.3'
-    retrofitVersion = '2.3.0'
-    roomVersion = '1.0.0-alpha6'
-    supportLibraryVersion = '26.0.1'
-    timberVersion = '4.5.1'
-    glideVersion = '4.0.0'
-    daggerVersion = '2.11'
-    glassfishAnnotationVersion = '10.0-b28'
-    butterknifeVersion = '8.5.1'
-    koinVersion = '1.0.2'
-    multidexVersion = '1.0.3'
-    firebaseVersion = '16.0.6'
+    dependencies = [
+            rxKotlin           : "io.reactivex.rxjava2:rxkotlin:2.1.0",
+            rxAndroid          : "io.reactivex.rxjava2:rxandroid:2.0.1",
+            glide              : "com.github.bumptech.glide:glide:4.0.0",
+            kotlin             : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.10",
+            javaxAnnotation    : "javax.annotation:jsr250-api:1.0",
+            javaxInject        : "javax.inject:javax.inject:1",
+            androidAnnotations : "com.android.support:support-annotations:26.0.1",
+            androidSupportV4   : "com.android.support:support-v4:26.0.1",
+            androidSupportV13  : "com.android.support:support-v13:26.0.1",
+            appCompatV7        : "com.android.support:appcompat-v7:26.0.1",
+            supportRecyclerView: "com.android.support:recyclerview-v7:26.0.1",
+            supportDesign      : "com.android.support:design:26.0.1",
+            timber             : "com.jakewharton.timber:timber:4.5.1",
+            multidex           : "com.android.support:multidex:1.0.3",
+            firebase           : "com.google.firebase:firebase-core:16.0.6",
+            navigationBottom   : "com.tbuonomo:morph-bottom-navigation:1.0.1",
+            leakcanary         : "com.squareup.leakcanary:leakcanary-android:1.5.4",
+            leakcanary_no_op   : "com.squareup.leakcanary:leakcanary-android-no-op:1.5.4",
+            toothpick_compiler : "com.github.stephanenicolas.toothpick:toothpick-compiler:1.1.2",
+            toothpickRuntime   : "com.github.stephanenicolas.toothpick:toothpick-runtime:1.1.2",
+            toothpickSmoothie  : "com.github.stephanenicolas.toothpick:smoothie:1.1.2",
 
-    //Testing
-    robolectricVersion = '3.4.2'
-    jUnitVersion = '4.12'
-    assertJVersion = '3.8.0'
-    mockitoVersion = '1.9.5'
-    dexmakerVersion = '1.0'
-    espressoVersion = '3.0.0'
-    testingSupportLibVersion = '0.1'
-    mockitoKotlinVersion = '1.5.0'
-    mockitoAndroidVersion = '2.8.47'
-    androidSupportRunnerVersion = '1.0.0'
-    androidSupportRulesVersion = '1.0.0'
-    dexmakerMockitoversion = '2.2.0'
-    runnerVersion = '0.5'
+            //Http: Retrofit
+            okHttp             : "com.squareup.okhttp3:okhttp:3.8.1",
+            okHttpLogger       : "com.squareup.okhttp3:logging-interceptor:3.8.1",
+            retrofit           : "com.squareup.retrofit2:retrofit:2.3.0",
+            retrofitConverter  : "com.squareup.retrofit2:converter-gson:2.3.0",
+            retrofitAdapter    : "com.squareup.retrofit2:adapter-rxjava2:2.3.0",
+            gson               : "com.google.code.gson:gson:2.8.1",
 
-    domainDependencies = [
-            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-            javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
-            rxKotlin:           "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}",
-            kotlin:             "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
-    ]
-
-    domainTestDependencies = [
-            junit:              "junit:junit:${jUnitVersion}",
-            mockito:            "com.nhaarman:mockito-kotlin:${mockitoKotlinVersion}",
-            assertj:            "org.assertj:assertj-core:${assertJVersion}"
-    ]
-
-    presentationDependencies = [
-            daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
-            dagger:             "com.google.dagger:dagger:${daggerVersion}",
-            okHttp:             "com.squareup.okhttp3:okhttp:${okHttpVersion}",
-            okHttpLogger:       "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
-            gson:               "com.google.code.gson:gson:${gsonVersion}",
-            rxKotlin:           "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}",
-            kotlin:             "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}",
-            rxAndroid:          "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
-            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-            javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
-            androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}",
-    ]
-
-    presentationTestDependencies = [
-            junit:              "junit:junit:${jUnitVersion}",
-            kotlinJUnit:        "org.jetbrains.kotlin:kotlin-test-junit:${kotlin_version}",
-            assertj:            "org.assertj:assertj-core:${assertJVersion}",
-            mockito:            "com.nhaarman:mockito-kotlin:${mockitoKotlinVersion}",
-            robolectric:        "org.robolectric:robolectric:${robolectricVersion}"
-    ]
-
-    dataDependencies = [
-            daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
-            dagger:             "com.google.dagger:dagger:${daggerVersion}",
-            okHttp:             "com.squareup.okhttp3:okhttp:${okHttpVersion}",
-            okHttpLogger:       "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
-            gson:               "com.google.code.gson:gson:${gsonVersion}",
-            rxKotlin:           "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}",
-            kotlin:             "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}",
-            rxAndroid:          "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
-            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-            javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
-            androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}",
-    ]
-
-    dataTestDependencies = [
-            junit:              "junit:junit:${jUnitVersion}",
-            kotlinJUnit:        "org.jetbrains.kotlin:kotlin-test-junit:${kotlin_version}",
-            assertj:            "org.assertj:assertj-core:${assertJVersion}",
-            mockito:            "com.nhaarman:mockito-kotlin:${mockitoKotlinVersion}",
-            robolectric:        "org.robolectric:robolectric:${robolectricVersion}"
-    ]
-
-    cacheDependencies = [
-            daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
-            dagger:             "com.google.dagger:dagger:${daggerVersion}",
-            gson:               "com.google.code.gson:gson:${gsonVersion}",
-            rxKotlin:           "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}",
-            kotlin:             "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}",
-            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-            javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
-            androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}",
-            roomRuntime:        "android.arch.persistence.room:runtime:${roomVersion}",
-            roomCompiler:       "android.arch.persistence.room:compiler:${roomVersion}",
-            roomRxJava:         "android.arch.persistence.room:rxjava2:${roomVersion}",
-    ]
-
-    cacheTestDependencies = [
-            junit:              "junit:junit:${jUnitVersion}",
-            kotlinJUnit:        "org.jetbrains.kotlin:kotlin-test-junit:${kotlin_version}",
-            assertj:            "org.assertj:assertj-core:${assertJVersion}",
-            mockito:            "com.nhaarman:mockito-kotlin:${mockitoKotlinVersion}",
-            robolectric:        "org.robolectric:robolectric:${robolectricVersion}",
-            roomTesting:        "android.arch.persistence.room:testing:${roomVersion}",
-            archTesting:        "android.arch.core:core-testing:${roomVersion}",
-            supportRunner:      "com.android.support.test:runner:${androidSupportRunnerVersion}",
-            supportRules:       "com.android.support.test:rules:${androidSupportRulesVersion}"
-    ]
-
-    remoteDependencies = [
-            daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
-            dagger:             "com.google.dagger:dagger:${daggerVersion}",
-            gson:               "com.google.code.gson:gson:${gsonVersion}",
-            rxKotlin:           "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}",
-            kotlin:             "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}",
-            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-            javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
-            androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}",
-            okHttp:             "com.squareup.okhttp3:okhttp:${okHttpVersion}",
-            okHttpLogger:       "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}",
-            retrofit:           "com.squareup.retrofit2:retrofit:${retrofitVersion}",
-            retrofitConverter:  "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
-            retrofitAdapter:    "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}"
-    ]
-
-    remoteTestDependencies = [
-            junit:              "junit:junit:${jUnitVersion}",
-            kotlinJUnit:        "org.jetbrains.kotlin:kotlin-test-junit:${kotlin_version}",
-            assertj:            "org.assertj:assertj-core:${assertJVersion}",
-            mockito:            "com.nhaarman:mockito-kotlin:${mockitoKotlinVersion}",
-            supportRunner:      "com.android.support.test:runner:${androidSupportRunnerVersion}",
-            supportRules:       "com.android.support.test:rules:${androidSupportRulesVersion}"
-    ]
-
-    mobileUiDependencies = [
-            koinAndroid: "org.koin:koin-android:${koinVersion}",
-            koinScope: "org.koin:koin-android-scope:${koinVersion}",
-            koinViewModel: "org.koin:koin-android-viewmodel:${koinVersion}",
-            butterknife: "com.jakewharton:butterknife:${butterknifeVersion}",
-            daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
-            dagger:             "com.google.dagger:dagger:${daggerVersion}",
-            rxKotlin:           "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}",
-            rxAndroid:          "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
-            glide:              "com.github.bumptech.glide:glide:${glideVersion}",
-            kotlin:             "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}",
-            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-            javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
-            androidAnnotations: "com.android.support:support-annotations:${supportLibraryVersion}",
-            androidSupportV4:   "com.android.support:support-v4:${supportLibraryVersion}",
-            androidSupportV13:  "com.android.support:support-v13:${supportLibraryVersion}",
-            appCompatV7:        "com.android.support:appcompat-v7:${supportLibraryVersion}",
-            supportRecyclerView:"com.android.support:recyclerview-v7:${supportLibraryVersion}",
-            supportDesign:      "com.android.support:design:${supportLibraryVersion}",
-            timber:             "com.jakewharton.timber:timber:${timberVersion}",
-            daggerSupport:      "com.google.dagger:dagger-android-support:${daggerVersion}",
-            daggerProcessor:    "com.google.dagger:dagger-android-processor:${daggerVersion}",
-            glassfishAnnotation: "org.glassfish:javax.annotation:${glassfishAnnotationVersion}",
-            multidex: "com.android.support:multidex:${multidexVersion}",
-            firebase: "com.google.firebase:firebase-core:${firebaseVersion}",
-            navigationBottom: "com.tbuonomo:morph-bottom-navigation:1.0.1"
-    ]
-
-    mobileUiTestDependencies = [
-            junit:              "junit:junit:${jUnitVersion}",
-            kotlinJUnit:        "org.jetbrains.kotlin:kotlin-test-junit:${kotlin_version}",
-            assertj:            "org.assertj:assertj-core:${assertJVersion}",
-            mockito:            "com.nhaarman:mockito-kotlin:${mockitoKotlinVersion}",
-            supportRunner:      "com.android.support.test:runner:${androidSupportRunnerVersion}",
-            supportRules:       "com.android.support.test:rules:${androidSupportRulesVersion}",
-            mockitoAndroid:     "org.mockito:mockito-android:${mockitoAndroidVersion}",
-            espressoCore:       "com.android.support.test.espresso:espresso-core:${espressoVersion}",
-            espressoIntents:    "com.android.support.test.espresso:espresso-intents:${espressoVersion}",
-            espressoContrib:    "com.android.support.test.espresso:espresso-contrib:${espressoVersion}",
-            androidRunner:      "com.android.support.test:runner:${runnerVersion}",
-            androidRules:       "com.android.support.test:rules:${runnerVersion}"
+            kotlinJUnit        : "org.jetbrains.kotlin:kotlin-test-junit:1.3.10",
+            mockito            : "com.nhaarman:mockito-kotlin:1.5.0",
+            junit              : "junit:junit:4.12",
+            assertj            : "org.assertj:assertj-core:3.8.0",
+            supportRunner      : "com.android.support.test:runner:1.0.0",
+            supportRules       : "com.android.support.test:rules:1.0.0",
+            mockitoAndroid     : "org.mockito:mockito-android:2.8.47",
+            espressoCore       : "com.android.support.test.espresso:espresso-core:3.0.0",
+            espressoIntents    : "com.android.support.test.espresso:espresso-intents:3.0.0",
+            espressoContrib    : "com.android.support.test.espresso:espresso-contrib:3.0.0",
+            androidRunner      : "com.android.support.test:runner:0.5",
+            androidRules       : "com.android.support.test:rules:0.5"
     ]
 
 }
