--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,16 +4,15 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    def domainDependencies = rootProject.ext.domainDependencies
-    def domainTestDependencies = rootProject.ext.domainTestDependencies
+    def dependencies = rootProject.ext.dependencies
 
-    implementation domainDependencies.javaxAnnotation
-    implementation domainDependencies.javaxInject
-    implementation domainDependencies.rxKotlin
-    implementation domainDependencies.kotlin
+    implementation dependencies.javaxAnnotation
+    implementation dependencies.javaxInject
+    implementation dependencies.rxKotlin
+    implementation dependencies.kotlin
 
-    testImplementation domainTestDependencies.junit
-    testImplementation domainTestDependencies.mockito
-    testImplementation domainTestDependencies.assertj
+    testImplementation dependencies.junit
+    testImplementation dependencies.mockito
+    testImplementation dependencies.assertj
 
 }
